Fixed oversized buttons on smaller screens (#67)
* Fixed oversized buttons on smaller screens

* Changed ws back to wss

* Renamed css to fixed-width

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -54,6 +54,10 @@ h1{
 	bottom: 1em;
 }
 
+.action-button.fixed-width{
+	width: 8.5em;
+}
+
 .top-button{
 	bottom:80px;
 }
